k8s-resources/foo-app/foo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo-app
  template:
    metadata:
      labels:
        app: foo-app
    spec:
      containers:
      - name: foo-app
        image: leodomeneghetti/foo-app:v1.0.0
        ports:
        - containerPort: 5000
