k8s-resources/foo-app/foo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-app-service
  namespace: goodnotes-takehome
  labels:
    namespace: goodnotes-takehome
spec:
  type: NodePort
  ports:
  - name: foo-port
    port: 8082
    targetPort: 5000
    nodePort: 30009
    protocol: TCP
  selector:
    app: foo-app
    namespace: goodnotes-takehome
    tier: backend
