k8s-resources/foo-app/foo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-app-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /foo
        backend:
          service:
            name: foo-app-service
            port:
              name: foo-port
